[gd_scene load_steps=7 format=3 uid="uid://b565xvn54k0ca"]

[ext_resource type="Texture2D" uid="uid://b2pu3w3fwkeyt" path="res://graphics/player/player.png" id="1_66xm7"]
[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_hmrn8"]
[ext_resource type="Material" uid="uid://q8ssi86s7myb" path="res://Scenes/Objects/gun_particles1.tres" id="3_20tcn"]
[ext_resource type="Texture2D" uid="uid://c0ut5jj67167e" path="res://graphics/decals/white.png" id="4_y8tgl"]
[ext_resource type="Material" uid="uid://d17dybc5h2txd" path="res://Scenes/Objects/gun_particles2.tres" id="5_xn6tj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4tp6y"]
radius = 64.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(-3, -3)
collision_mask = 15
script = ExtResource("1_hmrn8")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(38, 2)
rotation = 1.5708
texture = ExtResource("1_66xm7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 2)
shape = SubResource("CircleShape2D_4tp6y")

[node name="GunMarkers" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="GunMarkers"]
position = Vector2(133, 20)

[node name="Marker2D2" type="Marker2D" parent="GunMarkers"]
position = Vector2(131, 25)

[node name="Marker2D3" type="Marker2D" parent="GunMarkers"]
position = Vector2(131, 16)

[node name="LaserReload" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeReload" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GunParticles1" type="GPUParticles2D" parent="."]
position = Vector2(138, 22)
emitting = false
amount = 25
process_material = ExtResource("3_20tcn")
texture = ExtResource("4_y8tgl")
one_shot = true

[node name="GunParticles2" type="GPUParticles2D" parent="."]
position = Vector2(138, 19)
emitting = false
amount = 25
process_material = ExtResource("5_xn6tj")
texture = ExtResource("4_y8tgl")
one_shot = true

[connection signal="timeout" from="LaserReload" to="." method="_on_laser_reload_timeout"]
[connection signal="timeout" from="GrenadeReload" to="." method="_on_grenade_reload_timeout"]
